--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "node-hid": "^2.1.1",
     "request": "^2.88.2",
     "send-data": "^8.0.0",
+    "usb": "^2.0.3",
     "yargs": "^17.0.1"
   },
   "bin": {
